made banner image smaller, fix stretched image later

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -4,26 +4,31 @@
    align-items: center;
 }
 
+.banner-image {
+   height: 150px;
+   width: 100%;
+}
+
 .banner-logo {
-   width: 25%;
+   width: 20%;
    position: absolute;
-   filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .5));
+   // filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, .5));
 }
 
 @media(max-width: 1100px) {
    .banner-logo {
-      width: 40%;
+      width: 35%;
    }
 }
 
 @media(max-width: 825px) {
    .banner-logo {
-      width: 50%;
+      width: 45%;
    }
 }
 
 @media(max-width: 600px) {
    .banner-logo {
-      width: 75%;
+      width: 70%;
    }
 }
